remove full screen style since the full screen button has removed on mobile.

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
           //   } else {
           document.getElementById("unity-container").style.textAlign = "center";
 
-          var fullscreenButton = document.getElementById("unity-fullscreen-button");
-          fullscreenButton.style.display = "none";
+          /*var fullscreenButton = document.getElementById("unity-fullscreen-button");
+          fullscreenButton.style.display = "none";*/
 
           var buildTitle = document.getElementById("unity-build-title");
           buildTitle.style.display = "none";
