added manifest in html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Fate-Adventure-BETAPVP1</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <iframe width="560" height="315" 
